# soku-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  sudokus.txt
examples/: create_sudokus_file.rs  simple.rs
src/: candidates.rs  cell.rs  consts.rs  digit.rs  error.rs  generate.rs  grid.rs  lib.rs  macros.rs  main.rs  solve.rs  sudoku.rs
src/generate/: latin_squares.rs
src/solve/: backtracking.rs  brute_force.rs
