[package]
name = "soku"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/r0nsha/soku-rs"
description = "Easy sudoku generation and solving"
categories = ["game-development"]
keywords = ["sudoku", "solver", "generation", "generator"]
license-file = "LICENSE"

[[bin]]
name = "soku"

[dependencies]
bitflags = "1.3.2"
derive_more = "0.99.17"
rand = "0.8.5"
thiserror = "1.0.38"
